# vomvom

./: CLAUDE.md  Cargo.toml  NEXT.txt  README.md  TODO.txt  bidi_plan.md
.claude/: settings.local.json
assets/: dropdown_edit.htmv  dropdown_file.htmv  main.cssv
src/: headless_gl.rs  highlight.rs  main.rs  replay.rs  screenshot.rs
src/render/: css_parse.rs  femtovg_measurer.rs  glyph_cache.rs  html_parse.rs  layout.rs  mod.rs  paint.rs  style.rs  tree.rs
src/session/: buffer.rs  db.rs  mod.rs
