[package]
name = "vomvom"
version = "0.1.0"
edition = "2024"
default-run = "vomvom"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
ropey = "1.6"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
winit = "0.30.13"
femtovg = { version = "0.25", features = ["swash"] }
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
swash = "0.2.7"
imgref = "1.12.1"
rgb = "0.8.53"
zeno = "0.3.3"
arboard = "3"
fontdb = "0.23.0"
rustybuzz = "0.14"
unicode-bidi = "0.3"
unicode-linebreak = "0.1.5"

[profile.release]
opt-level = 1
